@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.48 2003/10/04 21:07:53 agc Exp $
+# $NetBSD: Makefile,v 1.49 2003/12/09 12:54:13 abs Exp $
 
-DISTNAME=	pkgchk-1.44
+DISTNAME=	pkgchk-1.45
 WRKSRC=		${WRKDIR}
 CATEGORIES=	pkgtools
 MASTER_SITES=	# empty
